# automedon

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  install-skill.sh  install.sh
.claude/: CLAUDE.md
.github/workflows/: release.yml
crates/kernel/: Cargo.toml
crates/kernel/src/: contract.rs  event.rs  executor.rs  ir.rs  lib.rs  run.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  display_id.rs  file_sink.rs  graph.rs  loader.rs  main.rs  plan.rs  retention.rs  validate.rs
crates/orchestrator/tests/: autocoder_workflow.rs  checkout_script.rs  coder_review.rs  coder_workflow.rs  commit_script.rs  composite_workflow.rs  cross_file_workflow.rs  dev_install_script.rs  dry_run_subcommand.rs  durable_logging.rs  graph_subcommand.rs  help_subcommand.rs  install_script.rs  install_skill_script.rs  llm_helper.rs  release_workflow.rs  repo_helper.rs  skill_docs.rs  step_model_env.rs  validate_env_subcommand.rs
crates/sinks/: Cargo.toml
crates/sinks/src/: config.rs  console.rs  file_sink.rs  lib.rs  retention.rs  tee.rs
docs/: agent-ochestrator.md  conventions.md  coverage.md  microkernel-boundary.md  roadmap.md
docs/adr/: 0001-termination-via-budgets-and-depth.md  0002-fault-propagation-as-structured-exception-handling.md  0003-microkernel-architecture.md  0004-single-token-execution-concurrency-deferred.md  0005-observability-as-emitted-event-stream.md  0006-kernel-implemented-in-rust.md  0007-ir-behind-an-interface-kernel-and-modules-as-separate-crates.md  0008-sub-workflows-by-id-registry.md  0009-step-output-on-a-dedicated-sink-channel.md  0010-step-environment-and-ephemeral-run-directory.md  0011-name-the-binary-automedon.md  0012-per-step-routing-contract-injected-into-the-step-environment.md
docs/handoffs/: 2026-06-07-design-vocabulary-grilling.md  2026-06-08-slice-2-initial-message.md
examples/: TASK.md  autocoder.yaml  coder.yaml  loop.yaml
examples/autocoder/: checkout.sh  create-pr.permissions.json  create-pr.sh  distill.sh
examples/autocoder/prompts/: create-pr.md  distill.md
examples/coder/: build-test.sh  code.permissions.json  code.sh  commit.permissions.json  commit.sh  review.permissions.json  review.sh
examples/coder/prompts/: code-revise-build.md  code-revise-findings.md  code.md  commit.md  review.md
examples/lib/: llm.sh  repo.sh
scripts/: dev-install.sh
skills/agent-orchestrator/: README.md  SKILL.md
skills/autocoder/: SKILL.md
skills/automedon/: README.md  SKILL.md
