[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

# The bin depends on the kernel, never the reverse (ADR-0003). serde_yaml — the
# concrete format — lives HERE, not in the kernel.
[dependencies]
kernel = { path = "../kernel" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
uuid = { version = "1.23.3", features = ["v7"] }

[[bin]]
name = "automedon"
path = "src/main.rs"
