[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

# The bin depends on the kernel and the Sink Modules, never the reverse
# (ADR-0003). serde_yaml — the concrete Workflow format — lives HERE, not in the
# kernel.
[dependencies]
kernel = { path = "../kernel" }
sinks = { path = "../sinks" }
serde_yaml = "0.9"
uuid = { version = "1.23.3", features = ["v7"] }

# serde_json is used only by the end-to-end tests, which parse the durable JSONL
# log the binary writes; the binary itself no longer touches it.
[dev-dependencies]
serde_json = "1.0.150"

[[bin]]
name = "automedon"
path = "src/main.rs"
